Updated DB migration for the new changes like the logout and state persistency
